style.css
@import url(//db.onlinewebfonts.com/c/d4280feab480528a5c1b9c7b210e97bd?family=VAG+Rounded);

@font-face {font-family: "VAG Rounded"; 
    src: url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.eot");
    src: url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.eot?#iefix") format("embedded-opentype"), 
    url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.woff2") format("woff2"), 
    url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.woff") format("woff"), 
    url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.ttf") format("truetype"), 
    url("//db.onlinewebfonts.com/t/d4280feab480528a5c1b9c7b210e97bd.svg#VAG Rounded") format("svg"); }


body {
	font-family: VAG Rounded;
	background-color: #f68fe0;
}

h1 {
	font-size: 50px;
	text-align: center;
	color: #f7e240;
	-webkit-text-stroke: 3px #a81fa1;
	position: relative;
	top: 20px;
	padding-bottom: 20px;
}

a {
   color: #000000;
   text-decoration: underline;
}

a:hover {
  color: #f7e240;
  background-color: #a81fa1;
}

.nav-tabs  .nav-link.active {
  color: #f68fe0;
  background-color: #140cb0;
  text-decoration: underline;
}

.hint{
	margin-left: 25%;
  margin-right: 25%;
  text-align: center;
  width: 50%;
  max-height: 250px;
	font-size: 25px;
	color:#140cb0;
	padding-bottom: 20px;
 }

 .hint.mic-status {
 	visibility: hidden;
 }

.question-header {
	text-align:left;
}

.question-response {
	padding-left:20px;
	width: 75%;
  color:#140cb0;
}

.response-bullet {
	list-style-type: circle;
	list-style-position: inside;
}

/* SCRIPT KIDDIE CSS https://www.w3schools.com/howto/howto_css_switch.asp */

.switch {
  justify-content: center;
  margin-left: 45%;
  margin-right: 45%;
  position: relative;
  width: 120px;
  height: 68px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #000000;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 52px;
  width: 52px;
  left: 8px;
  bottom: 8px;
  background-color: #696969;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #140cb0;
}

input:focus + .slider {
  box-shadow: 0 0 1px #140cb0;
}

input:checked + .slider:before {
  -webkit-transform: translateX(52px);
  -ms-transform: translateX(52px);
  transform: translateX(52px);
  background-color: #f7e240;
}

/* Rounded sliders */
.slider.round {
  border-radius: 68px;
}

.slider.round:before {
  border-radius: 50%;
}

